<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Farrow</string>
    <string name="action_settings">Settings</string>
    <string name="logIn">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Chat Now!</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="server_ip">Server IP:</string>
    <string name="server_port">Server Port:</string>
    
</resources>
