<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ceg.farrow.Set_data" >

    <EditText
        android:id="@+id/server_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/server_ip"
        android:layout_marginTop="44dp"
        android:textStyle="bold"
        android:textColor="#FF844B"
        android:text="@string/server_port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_port"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="#FF844B"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/accept" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server_ip"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:textColor="#FF844B"
        android:textStyle="bold"
        android:text="@string/server_ip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
